k8s/monitoring_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.nileshfatfatwale.dev
    - grafana.nileshfatfatwale.dev
    secretName: monitoring-tls
  rules:
  - host: prometheus.nileshfatfatwale.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus 
            port:
              number: 9090
  - host: grafana.nileshfatfatwale.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana 
            port:
              number: 80
